# app/systems/accounting/models/ledger.rb
@@ -26,6 +26,10 @@ module Accounting
       nil
     end
 
+    def full_code
+      "#{account_category.code}#{code}"
+    end
+
     private
 
     def code_length_matches
