# app/systems/accounting/serializers/journal_entry_blueprint.rb
@@ -3,34 +3,41 @@ module Accounting
   class JournalEntryBlueprint < Blueprinter::Base
     identifier :id
 
-    fields :date,
-           :effective_date,
-           :fiscal_year_id,
-           :no,
-           :ref,
-           :daily_no,
-           :state,
-           :entry_type,
-           :organization_id,
-           :creator_id,
-           :created_at
+    view :index do
+      fields :date,
+            :effective_date,
+            :fiscal_year_id,
+            :no,
+            :ref,
+            :daily_no,
+            :state,
+            :entry_type,
+            :organization_id,
+            :creator_id,
+            :created_at
 
-    field :debit do |je|
-      je.debit.to_f
+      field :debit do |je|
+        je.debit.to_f
+      end
+
+      field :credit do |je|
+        je.credit.to_f
+      end
+
+      field :creator_name do |journal_entry|
+        journal_entry.creator&.name
+      end
+
+      field :translations_hash, name: :t
     end
-
-    field :credit do |je|
-      je.credit.to_f
-    end
-
-    field :creator_name do |journal_entry|
-      journal_entry.creator&.name
-    end
-
-    field :translations_hash, name: :t
 
     view :show do
+      include_view :index
       association :items, blueprint: Accounting::JournalEntryItemBlueprint
+    end
+
+    view :explorer do
+      fields :date, :no, :ref
     end
   end
 end
